[tool.poetry]
name = "chess-rl"
version = "0.0.1"
description = ""
authors = ["Gerard Simons <sjrasimons@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-chess = "^0.31.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
